--- a/build.xml
+++ b/build.xml
@@ -7,6 +7,7 @@
   
   <import file="${xsbi.dir}/abu-common.xml" />
   <include file="${xsbi.dir}/abu-saxon-provider.xml" />
+  <include file="${xsbi.dir}/custom-abu-validator-provider.xml" />
   
   <!-- main build directories -->
   <property name="src.dir" location="${basedir}/src" />
@@ -40,20 +41,9 @@
   <property name="validator.configuration.version.full" value="2025-10-31-SNAPSHOT" />
   <property name="dist.name"
     value="validator-configuration-xrechnung_${xrechnung.version}_${validator.configuration.version.full}.zip" />
-  <!-- 3rd party resources -->
-  <!-- KoSIT XML Validator -->
-  <property name="validator.version" value="1.5.0" />
-  <property name="validator.download.url.prefix"
-    value="https://github.com/itplr-kosit/validator/releases/download" />
-    
-  <property name="validator.zip" value="validator-${validator.version}-distribution.zip" />
   
-  <!-- Pick by default the standalone distribution -->  
-  <property name="validator.jar" value="validationtool-${validator.version}-standalone.jar" />
-
-  <!-- the name of the JAR file in the downloaded ZIP file -->
-  <property name="saxon.jar" value="saxon-he-12.8.jar" />
-
+  <!-- 3rd party resources -->
+  
   <property name="cii.version" value="D16B" />
   <property name="cii.schema.artifact.id" value="D16B_SCRDM__Subset__CII" />
   <property name="cii.schema.zip" value="${cii.schema.artifact.id}-${cii.version}.zip" />
@@ -128,7 +118,7 @@
       description="Base directory in which to download Schematron Skeleton and keep intermediaries." />
     <attribute name="outdir" />
     <attribute name="insuffix" default="sch" />
-    <attribute name="saxon.jar" default="${lib.dir}/${saxon.jar}"
+    <attribute name="saxon.jar" default="${lib.dir}/${saxon-he.jar.name}"
       description="Location of Saxon jar." />
     <attribute name="deleteonexit" default="true"
       description="Whether to delete intermediate XSLT files on exit. Note if not deleting, then subsequent runs of macro produce wrong results!" />
@@ -202,59 +192,10 @@
     <delete file="${lib.dir}/${saxon.jar}" />
   </target>
 
-
-  <target name="retrieve-validator-from-local-build" depends="init" if="develop.local.validator">
-    <get src="${validator.download.url.prefix}/target/${validator.zip}" dest="${download.dir}/"
-      verbose="true" skipexisting="true" usetimestamp="true" />
-  </target>
-
-
-  <target name="retrieve-validator-from-github-release" depends="init"
-    unless="develop.local.validator">
-    <property name="download.url.full"
-      value="${validator.download.url.prefix}/v${validator.version}/${validator.zip}" />
-
-    <echo message="Retrieving validator version=${validator.version} from ${download.url.full}" />
-
-    <get src="${download.url.full}" dest="${download.dir}" verbose="true" skipexisting="true"
-      usetimestamp="true" />
-  </target>
-
-
-  <target name="retrieve-validator"
-    depends="init, retrieve-validator-from-local-build, retrieve-validator-from-github-release">
-    <!-- add check something was downloaded -->
-  </target>
-
-
-
-  <target name="provide-validator" depends="init, retrieve-validator"
-    description="Download KoSIT validation tool and add jar to library directory">
-
-    <echo message="Unpacking Validator resources" />
-
-    <unzip src="${download.dir}/${validator.zip}" dest="${lib.dir}">
-      <patternset>
-        <include name="**/${validator.jar}" />
-      </patternset>
-      <flattenmapper />
-    </unzip>
-
-    <unzip src="${lib.dir}/${validator.jar}" dest="${resource.dir}">
-      <patternset>
-        <include name="xsd/scenarios.xsd" />
-      </patternset>
-    </unzip>
-  </target>
-
-
-
   <property name="xr.testsuite.zip"
     value="xrechnung-${xrechnung.version}-testsuite-${xr.testsuite.version}.zip" />
 
-
-
-  <target name="retrieve-xr-testsuite-from-local-build" depends="init"
+  <target name="retrieve-xr-testsuite-from-local-build" depends="abu-common.init"
     if="develop.local.xr.testsuite">
     <get src="${xr.testsuite.download.url.prefix}/${xr.testsuite.zip}" dest="${download.dir}"
       verbose="true" skipexisting="false" usetimestamp="false" httpusecaches="false" />
@@ -343,7 +284,7 @@
     
   </target>
 
-  
+ 
 
   <target name="retrieve-cen-rules-from-master" depends="init" if="${cen.master.target}"
     description="Download CEN business rules (schematron) from master branch to download directory">
@@ -422,7 +363,7 @@
       insuffix="sch" workdir="${build.dir}/schematron" outdir="${build.dir}" />
     <schematron-compile schematron="${download.dir}/schematron/EN16931-CII-validation.sch"
       insuffix="sch" workdir="${build.dir}/schematron" outdir="${build.dir}" />
-    <!-- Creating schematron now using Saxon 9he-->
+    <!-- Creating schematron using Saxon 12-HE-->
     <!-- according to https://www.saxonica.com/html/documentation/using-xsl/xsltfromant.html-->
     <!-- customize CEN schematron rules for UBL -->
     <xslt in="${build.dir}/EN16931-UBL-validation.xslt" out="${resource.xsl.cen.ubl}"
@@ -516,9 +457,9 @@
       <factory name="net.sf.saxon.TransformerFactoryImpl" />
     </xslt>
   </target>
-
+  
   <target name="test-validator-assertions"
-    depends="init-test,provide-validator,test-validator-assertions-only,test-validator-report-with-schema-only"
+    depends="init-test, custom-abu-validator-provider.provide-validator,test-validator-assertions-only,test-validator-report-with-schema-only"
     description="Test XRechnung Configuration">
     <echo message="Testing with full build chain." />
   </target>
@@ -561,7 +502,7 @@
 
   <!-- TODO name could be improved -->
   <target name="create-validator-reports-from-testsuite"
-    depends="init-test, provide-validator, provide-testsuite"
+    depends="init-test, custom-abu-validator-provider.provide-validator, provide-testsuite"
     description="Only test XRechnung Configuration" unless="test.skip">
     <fail unless="testsuite.instances.dir"
       message="Property testsuite.instances.dir must exist for this target to work" />
@@ -585,7 +526,7 @@
     <pathconvert refid="custom" property="fileset.nonempty" setonempty="false"/>    
   </target>
   
-  <target name="create-validator-reports-from-custom-tests" depends="init-test, provide-validator, check-custom-tests-folder-is-empty"
+  <target name="create-validator-reports-from-custom-tests" depends="init-test, custom-abu-validator-provider.provide-validator, check-custom-tests-folder-is-empty"
     description="Validate custom test" unless="test.skip" if="fileset.nonempty">    
     <fail unless="test.docs.custom.dir"
       message="Property test.docs.custom.dir must exist for this target to work"/>    
@@ -628,7 +569,7 @@
     </java>
   </target>
 
-  <target name="test-integration" depends="init-test, provide-validator, provide-testsuite, test-cen-expected-behaviour, test-integration-only" 
+  <target name="test-integration" depends="init-test, custom-abu-validator-provider.provide-validator, provide-testsuite, test-cen-expected-behaviour, test-integration-only" 
     description="Integration testing result of XRechnung Configuration"></target>
 
   <target name="test-cen-unexpected-behaviour" depends="compile, init-test, retrieve-xmute"
