--- a/build.xml
+++ b/build.xml
@@ -640,11 +640,10 @@
   </target>
 
   <target name="dist" depends="compile,test, dist-only" description="Generate the distribution"> </target>
-  <target name="clean" description="clean up">
+  
+  <target name="clean-all" depends="clean, clean-lib, clean-download">
     <!-- Delete the ${build} and ${dist} directory trees -->
     <delete dir="${build.dir}" verbose="true" includeEmptyDirs="true" />
-    <delete dir="${dist.dir}" />
-    <delete dir="${lib.dir}" />
     <delete dir="${reports.dir}" />
   </target>
 </project>
