--- a/build.xml
+++ b/build.xml
@@ -8,7 +8,8 @@
   <import file="${xsbi.dir}/abu-common.xml" />
   <include file="${xsbi.dir}/abu-saxon-provider.xml" />
   <include file="${xsbi.dir}/custom-abu-validator-provider.xml" />
-  
+  <include file="${xsbi.dir}/custom-abu-schxslt.xml" />
+
   <!-- main build directories -->
   <property name="src.dir" location="${basedir}/src" />
   <property name="lib.dir" location="${basedir}/lib" />
@@ -38,12 +39,10 @@
   <property name="xrechnung.cvd.id"
     value="${xrechnung.spec.id}#compliant#urn:xeinkauf.de:kosit:xrechnung:cvd_${xrechnung.cvd.version.major.minor}" />
 
-  <property name="validator.configuration.version.full" value="2025-10-31-SNAPSHOT" />
+  <property name="validator.configuration.version.full" value="2026-01-31-SNAPSHOT" />
   <property name="dist.name"
     value="validator-configuration-xrechnung_${xrechnung.version}_${validator.configuration.version.full}.zip" />
-  
   <!-- 3rd party resources -->
-  
   <property name="cii.version" value="D16B" />
   <property name="cii.schema.artifact.id" value="D16B_SCRDM__Subset__CII" />
   <property name="cii.schema.zip" value="${cii.schema.artifact.id}-${cii.version}.zip" />
@@ -52,14 +51,14 @@
     value="https://projekte.kosit.org/api/v4/projects/356/packages/maven/de/xeinkauf/${cii.schema.artifact.id}/${cii.version}/${cii.schema.zip}" />
   <property name="ubl.version" value="2.1" />
   <property name="ubl.download.url.prefix"
-    value="http://docs.oasis-open.org/ubl/os-UBL-${ubl.version}" />
+    value="https://docs.oasis-open.org/ubl/os-UBL-${ubl.version}" />
   <property name="ubl.schema.zip" value="UBL-${ubl.version}.zip" />
 
   <property name="ubl.download.url"
     value="${ubl.download.url.prefix}/${ubl.schema.zip}" />
 
   <!-- set to "master" if you want latest code -->
-  <property name="cen.rules.version" value="1.3.14.2" />
+  <property name="cen.rules.version" value="1.3.15" />
   <property name="cen.rules.version.download" value="${cen.rules.version}" />
   <property name="cen.download.url.owner" value="ConnectingEurope" />
   <property name="cen.download.url.prefix"
@@ -87,6 +86,8 @@
   <property name="xr.testsuite.download.url.prefix"
     value="https://github.com/itplr-kosit/xrechnung-testsuite/releases/download" />
 
+  <property name="xmute.version.full" value="0.6" />
+  <property name="xmute.jar" value="xml-mutate-${xmute.version.full}.jar" />
 
   <!-- root/work directory where KoSIT validationtool expects Schema(s)-and trons -->
   <property name="repository.dir" location="${build.dir}" />
@@ -104,7 +105,6 @@
   <!-- Resource directories -->
   <property name="reports.schema.dir" location="${resource.dir}/xsd" />
 
-
   <property name="reports.dir" location="${build.dir}/reports" />
 
   <macrodef name="xslt-saxon">
@@ -112,90 +112,38 @@
       <fail message="Not implemented yet" />
     </sequential>
   </macrodef>
-  <macrodef name="schematron-compile" description="Compiles Schematron to XSLT using Saxon">
-    <attribute name="schematron" description="Schematron file to compile." />
-    <attribute name="workdir"
-      description="Base directory in which to download Schematron Skeleton and keep intermediaries." />
-    <attribute name="outdir" />
-    <attribute name="insuffix" default="sch" />
-    <attribute name="saxon.jar" default="${lib.dir}/${saxon-he.jar.name}"
-      description="Location of Saxon jar." />
-    <attribute name="deleteonexit" default="true"
-      description="Whether to delete intermediate XSLT files on exit. Note if not deleting, then subsequent runs of macro produce wrong results!" />
-    <attribute name="schematronbinding" default="xslt2"
-      description="Which XSLT version to build for." />
-    <sequential>
-      <local name="schematron.basename" />
-      <basename file="@{schematron}" suffix="@{insuffix}" property="schematron.basename" />
-      <echo message="Compiling '@{schematron}' Schematron with basename='${schematron.basename}'" />
-      <mkdir dir="@{workdir}" />
-      <tempfile property="expanded.sch" prefix="expanded" suffix=".sch" destdir="@{workdir}"
-        deleteonexit="@{deleteonexit}" />
-      <tempfile property="unabstract.sch" prefix="unabstract" suffix=".sch" destdir="@{workdir}"
-        deleteonexit="@{deleteonexit}" />
-      <tempfile property="schematron.xsl" prefix="schematron" suffix=".xsl" destdir="@{workdir}"
-        deleteonexit="@{deleteonexit}" />
-      <tempfile property="check-schematron.xsl" prefix="check-schematron" suffix=".xsl"
-        destdir="@{workdir}" deleteonexit="@{deleteonexit}" />
-      <!-- Download schematron skeletons -->
-      <property name="schematron.skeleton.url"
-        value="https://raw.githubusercontent.com/Schematron/schematron/master/trunk/schematron/code" />
-      <get src="${schematron.skeleton.url}/iso_dsdl_include.xsl" dest="@{workdir}" verbose="true"
-        skipexisting="true" usetimestamp="true" httpusecaches="true" />
-      <get src="${schematron.skeleton.url}/iso_abstract_expand.xsl" dest="@{workdir}" verbose="true"
-        skipexisting="true" usetimestamp="true" httpusecaches="true" />
-      <get src="${schematron.skeleton.url}/iso_svrl_for_@{schematronbinding}.xsl" dest="@{workdir}"
-        verbose="true" skipexisting="true" usetimestamp="true" httpusecaches="true" />
-      <get src="${schematron.skeleton.url}/iso_schematron_skeleton_for_saxon.xsl" dest="@{workdir}"
-        verbose="true" skipexisting="true" usetimestamp="true" httpusecaches="true" />
-      <!-- expand inclusions -->
-      <xslt style="@{workdir}/iso_dsdl_include.xsl" in="@{schematron}"
-        out="@{workdir}/${schematron.basename}-expanded.sch" classpath="@{saxon.jar}">
-        <factory name="net.sf.saxon.TransformerFactoryImpl" />
-      </xslt>
-      <!-- expand abstract patterns -->
-      <xslt style="@{workdir}/iso_abstract_expand.xsl"
-        in="@{workdir}/${schematron.basename}-expanded.sch"
-        out="@{workdir}/${schematron.basename}-unabstract.sch" classpath="@{saxon.jar}">
-        <factory name="net.sf.saxon.TransformerFactoryImpl" />
-      </xslt>
-      <!-- svrl it -->
-      <xslt style="@{workdir}/iso_svrl_for_@{schematronbinding}.xsl"
-        in="@{workdir}/${schematron.basename}-unabstract.sch"
-        out="@{outdir}/${schematron.basename}.xslt" classpath="@{saxon.jar}">
-        <factory name="net.sf.saxon.TransformerFactoryImpl" />
-        <param name="generate-fired-rule" expression="false" />
-        <param name="full-path-notation" expression="3" />
-      </xslt>
-      <echo message="finished schematron compile output to @{outdir}/${schematron.basename}.xslt" />
-    </sequential>
-  </macrodef>
 
-  <target name="init" depends="abu-common.init" description="Initializes build directory structure and ISO timestamp">
+  <target name="init" depends="abu-common.init">
     
     <!-- sets the property cen.master.target if version is set to master and the only downloads from master instaead of release.  -->
     <condition property="cen.master.target">
       <equals arg1="${cen.rules.version}" arg2="master" />
     </condition>
-
+    
+    <condition property="xmute.jar.available">
+      <available file="${lib.dir}/${xmute.jar}"/>
+    </condition>
+    
     <!-- Create timestamps -->
     <tstamp>
       <format property="build.date" pattern="yyyy-MM-dd" />
     </tstamp>
     <echo>Build date: ${build.date}</echo>
-    <!-- Create the build directory structure used by compile -->
+    
     <mkdir dir="${download.dir}" />
   </target>
 
-  <target name="delete-saxon" depends="init" description="Remove downloaded Saxon-HE stuff">
-    <delete file="${download.dir}/SaxonHE${saxon.file.version}.zip" />
-    <delete file="${lib.dir}/${saxon.jar}" />
-  </target>
+
+  <target name="prepare-saxon" depends="abu-saxon-provider.provide-saxon" />
+
+  <target name="abu-saxon-provider.delete-saxon" />
+
+  <target name="provide-validator" depends="custom-abu-validator-provider.provide-validator" />
 
   <property name="xr.testsuite.zip"
     value="xrechnung-${xrechnung.version}-testsuite-${xr.testsuite.version}.zip" />
 
-  <target name="retrieve-xr-testsuite-from-local-build" depends="abu-common.init"
+  <target name="retrieve-xr-testsuite-from-local-build" depends="init"
     if="develop.local.xr.testsuite">
     <get src="${xr.testsuite.download.url.prefix}/${xr.testsuite.zip}" dest="${download.dir}"
       verbose="true" skipexisting="false" usetimestamp="false" httpusecaches="false" />
@@ -208,7 +156,6 @@
       src="${xr.testsuite.download.url.prefix}/release-${xr.testsuite.version}/${xr.testsuite.zip}"
       dest="${download.dir}" verbose="true" skipexisting="true" usetimestamp="true" />
   </target>
-
 
   <target name="retrieve-xr-testsuite"
     depends="init-test, retrieve-xr-testsuite-from-local-build, retrieve-xr-testsuite-from-github-release">
@@ -284,7 +231,7 @@
     
   </target>
 
- 
+  
 
   <target name="retrieve-cen-rules-from-master" depends="init" if="${cen.master.target}"
     description="Download CEN business rules (schematron) from master branch to download directory">
@@ -322,17 +269,29 @@
 
 
   <target name="provide-xrechnung-schematron"
-    depends="init, retrieve-xrechnung-schematron-from-local-build, retrieve-xrechnung-schematron-from-github-release"
-    description="Retrieve and prepare XRechnung Schemtaron">
-    <!-- Prepare XRechnung Schematron -->
+    depends="init, retrieve-xrechnung-schematron-from-local-build, retrieve-xrechnung-schematron-from-github-release, prepare-saxon"
+    description="Retrieve and prepare XRechnung Schematron with static rule IDs">
+    <!-- Extract pre-compiled XRechnung Schematron XSL files -->
     <unzip src="${download.dir}/${xr.schematron.zip}"
-      dest="${resource.dir}/xrechnung/${xrechnung.version}/xsl">
+      dest="${download.dir}/xrechnung-schematron">
       <patternset>
         <include name="**/XRechnung*.xsl" />
       </patternset>
-      <flattenmapper />
     </unzip>
-
+    
+    <!-- Convert dynamic id attributes to static for xml-mutate compatibility -->
+    <xslt in="${download.dir}/xrechnung-schematron/schematron/ubl/XRechnung-UBL-validation.xsl"
+          out="${resource.xsl.xr.ubl}"
+          style="${src.dir}/convert-dynamic-id-to-static.xsl"
+      classpathref="cp.saxon.xslt">
+      <factory name="net.sf.saxon.TransformerFactoryImpl" />
+    </xslt>
+    
+    <xslt in="${download.dir}/xrechnung-schematron/schematron/cii/XRechnung-CII-validation.xsl"
+          out="${resource.xsl.xr.cii}"
+          style="${src.dir}/convert-dynamic-id-to-static.xsl" classpathref="cp.saxon.xslt">
+      <factory name="net.sf.saxon.TransformerFactoryImpl" />
+    </xslt>
   </target>
 
 
@@ -359,27 +318,25 @@
   
   <target name="compile-cen-rules-only" description="Works for zip from master and release zips">
     
-    <schematron-compile schematron="${download.dir}/schematron/EN16931-UBL-validation.sch"
+    <schematron-compile-schxslt schematron="${download.dir}/schematron/EN16931-UBL-validation.sch"
       insuffix="sch" workdir="${build.dir}/schematron" outdir="${build.dir}" />
-    <schematron-compile schematron="${download.dir}/schematron/EN16931-CII-validation.sch"
+    <schematron-compile-schxslt schematron="${download.dir}/schematron/EN16931-CII-validation.sch"
       insuffix="sch" workdir="${build.dir}/schematron" outdir="${build.dir}" />
-    <!-- Creating schematron using Saxon 12-HE-->
-    <!-- according to https://www.saxonica.com/html/documentation/using-xsl/xsltfromant.html-->
+    <!-- Creating schematron now using Saxon 12he-->
+    <!-- according to https://www.saxonica.com/html/documentation12/using-xsl/xsltfromant.html -->
     <!-- customize CEN schematron rules for UBL -->
     <xslt in="${build.dir}/EN16931-UBL-validation.xslt" out="${resource.xsl.cen.ubl}"
-      style="${src.dir}/remove-dead-apply-templates.xsl">
-      <classpath location="${lib.dir}/${saxon.jar}" />
+      style="${src.dir}/remove-dead-apply-templates.xsl" classpathref="cp.saxon.xslt">
       <factory name="net.sf.saxon.TransformerFactoryImpl" />
     </xslt>
     <!-- customize CEN schematron rules for CII -->
     <xslt in="${build.dir}/EN16931-CII-validation.xslt" out="${resource.xsl.cen.cii}"
-      style="${src.dir}/remove-dead-apply-templates.xsl">
-      <classpath location="${lib.dir}/${saxon.jar}" />
+      style="${src.dir}/remove-dead-apply-templates.xsl" classpathref="cp.saxon.xslt">
       <factory name="net.sf.saxon.TransformerFactoryImpl" />
     </xslt>
   </target>
 
-  <target name="compile-cen-rules" depends="retrieve-cen-rules,abu-saxon-provider.provide-saxon,compile-cen-rules-only"
+  <target name="compile-cen-rules" depends="retrieve-cen-rules,prepare-saxon,compile-cen-rules-only"
     description="Works for zip from master and release zips"/>
 
 
@@ -409,7 +366,7 @@
 
 
   <target name="compile"
-    depends="compile-scenario,retrieve-all-schema-rules,compile-cen-rules,abu-saxon-provider.provide-saxon"
+    depends="compile-scenario,retrieve-all-schema-rules,compile-cen-rules,prepare-saxon"
     description="Compile XSDs and XSLTs into validation configuration conformat repository directory">
     <echo>Compiling Schemas and XSLTs ...</echo>
     <copy file="${src.dir}/default-report.xsl" todir="${resource.dir}" />
@@ -452,14 +409,13 @@
     <mkdir dir="${testsuite.instances.dir}" />
     <!-- customize scenarios.xml for testing purpose -->
     <xslt in="${repository.dir}/scenarios.xml" out="${test.build.dir}/scenarios.xml"
-      style="${src.dir}/create-test-scenario.xsl">
-      <classpath location="${lib.dir}/${saxon.jar}" />
+      style="${src.dir}/create-test-scenario.xsl" classpathref="cp.saxon.xslt">
       <factory name="net.sf.saxon.TransformerFactoryImpl" />
     </xslt>
   </target>
-  
+
   <target name="test-validator-assertions"
-    depends="init-test, custom-abu-validator-provider.provide-validator,test-validator-assertions-only,test-validator-report-with-schema-only"
+    depends="init-test,provide-validator,test-validator-assertions-only,test-validator-report-with-schema-only"
     description="Test XRechnung Configuration">
     <echo message="Testing with full build chain." />
   </target>
@@ -474,8 +430,7 @@
       <fileset dir="${reports.dir}" includes="*-report.xml" />
     </schemavalidate>
     <echo>Schematron validating reports ...</echo>
-    <xslt style="${src.dir}/report.sch.xsl" includes="${reports.dir}/*.xml" destdir="${reports.dir}">
-      <classpath location="${lib.dir}/${saxon.jar}" />
+    <xslt style="${src.dir}/report.sch.xsl" includes="${reports.dir}/*.xml" destdir="${reports.dir}" classpathref="cp.saxon.xslt">
       <factory name="net.sf.saxon.TransformerFactoryImpl" />
     </xslt>
   </target>
@@ -502,7 +457,7 @@
 
   <!-- TODO name could be improved -->
   <target name="create-validator-reports-from-testsuite"
-    depends="init-test, custom-abu-validator-provider.provide-validator, provide-testsuite"
+    depends="init-test, provide-validator, provide-testsuite"
     description="Only test XRechnung Configuration" unless="test.skip">
     <fail unless="testsuite.instances.dir"
       message="Property testsuite.instances.dir must exist for this target to work" />
@@ -526,7 +481,7 @@
     <pathconvert refid="custom" property="fileset.nonempty" setonempty="false"/>    
   </target>
   
-  <target name="create-validator-reports-from-custom-tests" depends="init-test, custom-abu-validator-provider.provide-validator, check-custom-tests-folder-is-empty"
+  <target name="create-validator-reports-from-custom-tests" depends="init-test, provide-validator, check-custom-tests-folder-is-empty"
     description="Validate custom test" unless="test.skip" if="fileset.nonempty">    
     <fail unless="test.docs.custom.dir"
       message="Property test.docs.custom.dir must exist for this target to work"/>    
@@ -543,18 +498,16 @@
       <arg value="${test.docs.custom.dir}"/>
     </java>
   </target>
-
-  <target name="retrieve-xmute" depends="init">
-    <fail unless="xmute.download.url.prefix"
-      message="Property xmute.download.url.prefix must exist for this target to work" />
-    <property name="xmute.version.full" value="0.5" />
-    <property name="xmute.jar" value="xml-mutate.jar" />
-    <get src="${xmute.download.url.prefix}/target/xml-mutate-${xmute.version.full}.jar"
-      dest="${lib.dir}/${xmute.jar}" verbose="true" skipexisting="false" usetimestamp="true" />
-  </target>
+  
+    <target name="retrieve-xmute" depends="init" unless="xmute.jar.available">
+      <fail unless="xmute.download.url.prefix"
+        message="Property xmute.download.url.prefix must exist for this target to work" />
+      <get src="${xmute.download.url.prefix}/target/xml-mutate-${xmute.version.full}.jar"
+             dest="${lib.dir}/${xmute.jar}" verbose="true" skipexisting="false" usetimestamp="true" />
+    </target>
 
   <target name="test-cen-expected-behaviour" depends="compile, init-test, retrieve-xmute"
-    description="Test Schematron Rules with XML-Mutate" if="xmute.download.url.prefix">
+    description="Test Schematron Rules with XML-Mutate">
     <echo>Generate and test instances with expected behaviour ...</echo>
     <java jar="${lib.dir}/${xmute.jar}" failonerror="true" fork="true" dir="${basedir}">
       <arg value="--schematron" />
@@ -568,14 +521,13 @@
     </java>
   </target>
 
-  <target name="test-integration" depends="init-test, custom-abu-validator-provider.provide-validator, provide-testsuite, test-cen-expected-behaviour, test-integration-only" 
+  <target name="test-integration" depends="init-test, provide-validator, provide-testsuite, test-cen-expected-behaviour, test-integration-only" 
     description="Integration testing result of XRechnung Configuration"></target>
 
   <target name="test-cen-unexpected-behaviour" depends="compile, init-test, retrieve-xmute"
     description="Test for unexpected behaviour in CEN Schematron Rules">
     <echo>Generate and test instances with unexpected behaviour ...</echo>
     <java jar="${lib.dir}/${xmute.jar}" failonerror="true" fork="true" dir="${basedir}">
-
       <arg value="--schematron" />
       <arg value="xrubl=${resource.xsl.xr.ubl}" />
       <arg value="--schematron" />
@@ -638,11 +590,12 @@
       excludes="download/**,test/**,schematron/**,reports/**" />
   </target>
 
-  <target name="dist" depends="compile,test, dist-only" description="Generate the distribution"> </target>
+  <target name="dist" depends="compile,test, dist-only" description="Generate the distribution" /> 
+
+  <target name="clean" depends="abu-common.clean-lib" />
   
-  <target name="clean-all" depends="clean, clean-lib, clean-download">
-    <!-- Delete the ${build} and ${dist} directory trees -->
-    <delete dir="${build.dir}" verbose="true" includeEmptyDirs="true" />
-    <delete dir="${reports.dir}" />
-  </target>
+  <target name="clean-lib" depends="abu-common.clean-lib" />
+  
+  <target name="clean-all" depends="abu-common.clean-all" />
 </project>
+
